--- a/ja-documentation.html
+++ b/ja-documentation.html
@@ -36,8 +36,12 @@ layout: ja-default
                     <li><a href="../ja-usingrnns">再帰型ニューラルネットワークをDL4Jで使用</a></li>
                     <li><a href="../ja-lstm">再帰型ネットワークと長・短期記憶についての初心者ガイド</a></li>
                     <li><a href="../ja-simple-image-load-transform">ディープニューラルネットワークに画像を読み込むためにカスタマイズされたデータパイプライン</a></li>
+                    <li><a href="../ja-spark">Sparkを使ったDeeplearning4j</a></li>
+                    <li><a href="../ja-gpu">Deeplearning4jをGPU上で使う</a></li>
                     <li><a href="../ja-about">Skymindについて</a></li>
                     <li><a href="http://nd4j.org/ja-getstarted">ND4J: フルインストール</a></li>
+                    <li><a href="http://nd4j.org/ja-tensor">テンソルとND4J</a></li>
+                    <li><a href="http://nd4j.org/ja-userguide">ND4Jユーザーガイド</a></li>
                 </ul>
     </div>
 </div>
